<resources>
    <string name="app_name">Mesh lwa7dk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decline">decline</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="agree">agree</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_our_app">Please login to continue using our app.</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="register">Register</string>
    <string name="please_sign_up_to_enter_in_a_app">Please sign up to enter in an app.</string>
    <string name="already_have_an_acoount">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_doctors">Doctors</string>
    <string name="title_booking_list">New Booking</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="please_enter_your_password">Please enter your password.</string>
    <string name="continue0">Continue</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="please_enter_your_password_confirmation">Please enter password confirmation.</string>
    <string name="passwords_do_not_match">Passwords don\'t match.</string>
    <string name="phone">Phone</string>
    <string name="national_id">National Id</string>
    <string name="please_enter_your_phone">Please enter your phone.</string>
    <string name="please_enter_your_age">Please enter your date of birth.</string>
    <string name="please_enter_your_nationalId">Please enter your national id.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_select_the_gender">Please select the gender.</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="this_day_is_not_working_day">This Day is not a working day!</string>
    <string name="you_choose_a_reservation">You choose a reservation</string>
    <string name="confirmation">Confirmation</string>
    <string name="on_date">On Date : </string>
    <string name="at">At : </string>
    <string name="clock"> o\'clock"</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="waiting_for_a_doctor">Waiting for a doctor</string>
    <string name="waiting_to_start_meeting">Waiting To Start Meeting …</string>
    <string name="notification">Notification</string>
    <string name="identity_card">Identity Card</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="insurance_card">Insurance Card</string>
    <string name="booking">Booking</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_available_time">Choose available time</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="your_password_is_too_small">Your password is too weak.</string>
    <string name="health_insurance">Your Health Insurance Number</string>
    <string name="please_enter_your_health_insurance">Please enter your health insurance.</string>
    <string name="please_enter_a_valid_national_id">Please enter a valid national id</string>
    <string name="loading">Loading …</string>
    <string name="no_notifications">No Notifications!</string>
    <string name="no_reservations">No Reservations!</string>
    <string name="rays">X-Rays</string>
    <string name="analyses">Analysis</string>
    <string name="the_national_id_numbers_must_be_digits">The national id numbers must be 14 digits.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_numbers_must_be_digits">Mobile number must be 11 digits.</string>
    <string name="government">Governorate</string>
    <string name="pending">Pending</string>
    <string name="check_up">Check up</string>
    <string name="image_selected">Image selected</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="lab_results">Lab Results</string>
    <string name="the_latest_scans">The Latest Scans</string>
    <string name="you_can_upload_photo_until_4_images">you can upload photo until 4 images</string>
    <string name="upload_image">Upload Images</string>
    <string name="the_latest_lab_results">The Latest Lab Results</string>
    <string name="skip">Skip</string>
    <string name="confirm_number">Confirm Number</string>
    <string name="resend">Resend</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="welcome_to">welcome to</string>
    <string name="before_we_start_please_choose_your_prefered_language">Before we start please, choose your preferred language</string>
    <string name="error">Error</string>
    <string name="server_error">Server Error</string>
    <string name="no_internet">No Internet</string>
    <string name="no_data">No Data</string>
    <string name="continue_">Continue</string>
    <string name="next">Next</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="password_field_validation">Password field  is required</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_leanth">password must be at least 8 and max 20 character</string>
    <string name="not_empty_msg">This field is required</string>
    <string name="email_field_validation">Invalid email</string>
    <string name="confirm_pass_validation">Must match password</string>
    <string name="name_length_valdation">Name must be more than 3 characters and less than 15 characters</string>
    <string name="user_name_valdation">Invalid UserName</string>
    <string name="phone_must_be_numbers_msg">Phone must be Numbers only</string>
    <string name="phone_length_msg">phone must be at least 9 digits and maximum 15 digit</string>
    <string name="text_length_msg">This text doesn\'t achieve the length requirement</string>
    <string name="characters_only">Characters Only</string>
    <string name="must_select_an_item">Must Select An Item</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="let_s_sign_yo_in">Let\'s sign you in.</string>
    <string name="profile_for">Profile for</string>
    <string name="every_patient">every Patient</string>
    <string name="change_language">Change Language</string>
    <string name="validate_product">Validate Product</string>
    <string name="please_add_your_rx_scan_product_barcode_qrcode_and_add_proof_of_purchase">Please add your RX , Scan product Barcode/Qrcode and add proof of purchase</string>
    <string name="rx">RX</string>
    <string name="scan_product_code">Scan Product Code</string>
    <string name="receipt">Receipt</string>
    <string name="application_for_patient_care">Application for patient care</string>
    <string name="sponsored_by_janssen">Sponsored by Janssen</string>
    <string name="now_you_can_upload_a_picture_of_the_prescription_and_choose_the_nearest_pharmacy_to_you_where_your_medicine_is_available_and_we_will_send_you_dose_reminder_and_when_to_provide_your_next_pack">Now you can Upload a picture of the prescription and choose the nearest pharmacy to you where your medicine is available, and we will send you dose reminder and when to provide your next pack</string>
    <string name="thank_you_for_using_msh_lwa7dk_app">Thank you for using (Msh lwa7dk) App</string>
</resources>