<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.orderprogram.OrderProgramFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:text="@string/validate_product"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:text="@string/please_add_your_rx_scan_product_barcode_qrcode_and_add_proof_of_purchase"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanBTN"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_10sdp"
        android:text="@string/scan_product_code"
        app:icon="@drawable/ic_scan_barcode"
        app:iconGravity="end"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msg"
        app:strokeColor="@color/colorAccentLight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadRXBTN"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_10sdp"
        android:text="@string/rx"
        app:icon="@drawable/ic_rx"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanBTN"
        app:strokeColor="@color/colorAccentLight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadReceiptBTN"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_10sdp"
        android:text="@string/receipt"
        app:icon="@drawable/ic_receipt"
        app:iconGravity="end"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadRXBTN"
        app:strokeColor="@color/colorAccentLight" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="32dp"
        android:padding="@dimen/_10sdp"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadReceiptBTN" />
</androidx.constraintlayout.widget.ConstraintLayout>